# sip_client

./: .gitignore  CMakeLists.txt  README.rst
lib/sip_client/include/sip_client/: sip_client_internal.h
src/: main.cpp
